Kelsey Development Sandbox/src/objects/DS_TRDETAIL1__c.object
<CustomObject>
    <fields>
        <fullName>T13RINDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Industrial/technological</description>
        <label>T13RINDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Other Adult Relative</description>
        <label>T13RINJAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Child (self)</description>
        <label>T13RINJC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJOS__c</fullName>
        <description>Natural Dis injury Other Specified</description>
        <label>T13RINJOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T13RINJOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Other Youth</description>
        <label>T13RINJOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Other</description>
        <label>T13RINJO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Parent</description>
        <label>T13RINJP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Sibling</description>
        <label>T13RINJSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis injury Unrelated Adult</description>
        <label>T13RINJUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RINJ__c</fullName>
        <description>Natural Dis serious injury inflicted</description>
        <label>T13RINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T13RLAND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Landslides</description>
        <label>T13RLAND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13ROTHS__c</fullName>
        <description>Natural Dis type Other Specified</description>
        <label>T13ROTHS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T13ROTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Other</description>
        <label>T13ROTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RPHE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Public Health Emergency</description>
        <label>T13RPHE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RTORN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Tornado</description>
        <label>T13RTORN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINFWIT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab include Forced Witnessing</description>
        <label>T1RINFWIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Serious injury Oth Ad Rel</description>
        <label>T1RINJAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Serious injury  Child</description>
        <label>T1RINJC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Serious injury OthYouth</description>
        <label>T1RINJOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Serious injury Parent</description>
        <label>T1RINJP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Serious injury  Sibling</description>
        <label>T1RINJSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Serious injury Unrel Ad</description>
        <label>T1RINJUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINJ__c</fullName>
        <description>Sex Mal/Ab serious injury inflicted</description>
        <label>T1RINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T1RINMINR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T1RINMINR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINOSP__c</fullName>
        <label>T1RINOSP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T1RINO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T1RINO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RINPRN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T1RINPRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPENET__c</fullName>
        <description>Sex Mal/Ab involve penetration</description>
        <label>T1RPENET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T1RPERAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp = Other Adult Rel</description>
        <label>T1RPERAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPEROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp = Other Youth</description>
        <label>T1RPEROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPERP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp = Parent</description>
        <label>T1RPERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPERSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp = Sibling</description>
        <label>T1RPERSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPERST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp= Stranger</description>
        <label>T1RPERST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPERUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp = Unrelated adult</description>
        <label>T1RPERUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RPERU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Perp = Unknown</description>
        <label>T1RPERU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RREPORT__c</fullName>
        <description>Sex Mal/Ab Was a report filed</description>
        <label>T1RREPORT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T1RSETC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Setting = Community</description>
        <label>T1RSETC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RSETS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Mal/Ab Setting = School</description>
        <label>T1RSETS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T1RWEAPON__c</fullName>
        <description>Sex Mal/Ab Weapon</description>
        <label>T1RWEAPON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T2RINFWIT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault include Forced Witnessing</description>
        <label>T2RINFWIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RINMINR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T2RINMINR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RINOSP__c</fullName>
        <label>T2RINOSP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2RINO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T2RINO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RINPRN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T2RINPRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPENET__c</fullName>
        <description>Sex Assault involve penetration</description>
        <label>T2RPENET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T2RPERAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp = Other Adult Rel</description>
        <label>T2RPERAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPEROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp = Other Youth</description>
        <label>T2RPEROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPERP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp = Parent</description>
        <label>T2RPERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPERSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp = Sibling</description>
        <label>T2RPERSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPERST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp= Stranger</description>
        <label>T2RPERST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPERUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp = Unrelated adult</description>
        <label>T2RPERUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RPERU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sex Assault Perp = Unknown</description>
        <label>T2RPERU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2RREPORT__c</fullName>
        <description>Sex Assault Was a report filed</description>
        <label>T2RREPORT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T2RWEAPON__c</fullName>
        <description>Sex Assault weapon used</description>
        <label>T2RWEAPON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T3RBENAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary = Other Adult Relative</description>
        <label>T3RBENAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary = Child</description>
        <label>T3RBENC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary =  Other Youth</description>
        <label>T3RBENOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary = Parent</description>
        <label>T3RBENP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary = Sibling</description>
        <label>T3RBENSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary =  Stranger</description>
        <label>T3RBENST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary = Unrelated Adult</description>
        <label>T3RBENUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RBENU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Beneficiary = Unknown</description>
        <label>T3RBENU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation=Drugs</description>
        <label>T3RCMPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPFD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation= Food</description>
        <label>T3RCMPFD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation= Favors</description>
        <label>T3RCMPF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPMP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation= Material Possessions</description>
        <label>T3RCMPMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation= Money</description>
        <label>T3RCMPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPOS__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) child compensation= Other Specified</description>
        <label>T3RCMPOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T3RCMPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) child compensation= Other</description>
        <label>T3RCMPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation=Personal Safety</description>
        <label>T3RCMPPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation= Safety Another</description>
        <label>T3RCMPSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Child compensation= Shelter</description>
        <label>T3RCMPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RCMP__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) compensation</description>
        <label>T3RCMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T3RMENB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means= Brothel</description>
        <label>T3RMENB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RMENE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means = Escort</description>
        <label>T3RMENE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RMENF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means = Forced labor</description>
        <label>T3RMENF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RMENOL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means = Online</description>
        <label>T3RMENOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RMENOS__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) means = Other Specified</description>
        <label>T3RMENOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T3RMENO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means = Other</description>
        <label>T3RMENO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RMENS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means = Street prostitution</description>
        <label>T3RMENS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RMENU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) means = Unknown</description>
        <label>T3RMENU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RPERAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Perp = Other Adult Rel</description>
        <label>T3RPERAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RPEROS__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) Perp = Other Specified</description>
        <label>T3RPEROS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T3RPEROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Perp = Other Youth</description>
        <label>T3RPEROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RPERO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Perp = Other</description>
        <label>T3RPERO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RPERST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Perp= Stranger</description>
        <label>T3RPERST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RPERUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Perp = Unrelated adult</description>
        <label>T3RPERUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RPERU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) Perp = Unknown</description>
        <label>T3RPERU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RREPORT__c</fullName>
        <description>Trafficking report filed</description>
        <label>T3RREPORT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T3RTHICS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Contracted STD</description>
        <label>T3RTHICS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIDU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking threatened or injured=  Forced Drug Use</description>
        <label>T3RTHIDU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking threatened or injured= Pregnancy/ Miscarriage/ Forced Abortion</description>
        <label>T3RTHIFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIHF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Harm to Family</description>
        <label>T3RTHIHF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIOS__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Other Specified</description>
        <label>T3RTHIOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T3RTHIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Other</description>
        <label>T3RTHIO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Physically</description>
        <label>T3RTHIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Withheld Resources</description>
        <label>T3RTHIR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHIT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured= Tatooed</description>
        <label>T3RTHIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T3RTHI__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) threatened or injured</description>
        <label>T3RTHI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T3RTRNSP__c</fullName>
        <description>Trafficking (Commercial Sex or Labor) transported to different location</description>
        <label>T3RTRNSP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T3RTRSTL__c</fullName>
        <description>Trafficking transported  across state lines</description>
        <label>T3RTRSTL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T4RPERP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phy Mal/Ab Perp = Parent</description>
        <label>T4RPERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T4RPERSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phy Mal/Ab Perp = Sibling</description>
        <label>T4RPERSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T4RWEAPON__c</fullName>
        <description>Phy Mal/Ab Was a weapon used</description>
        <label>T4RWEAPON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T6RMTYPED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Psychological Maltreatment type = Excessive Demands</description>
        <label>T6RMTYPED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T6RMTYPEN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Psychological Maltreatmenttype = Emotional Neglect</description>
        <label>T6RMTYPEN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T6RMTYPOS__c</fullName>
        <description>Emotional Abuse type = Other Specify</description>
        <label>T6RMTYPOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T6RMTYPOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emotional Abuse type = Other</description>
        <label>T6RMTYPOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T6RMTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emotional Abuse type = Unknown</description>
        <label>T6RMTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T6RMTYPVA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Psychological Maltreatment type = Verbal Abuse</description>
        <label>T6RMTYPVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type = Educational</description>
        <label>T7RTYPED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type = Inadequate supervision</description>
        <label>T7RTYPIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPMD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type = Medical</description>
        <label>T7RTYPMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPOS__c</fullName>
        <description>Neglect type = Other Specified</description>
        <label>T7RTYPOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T7RTYPOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type  = Other</description>
        <label>T7RTYPOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPPH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type = Physical</description>
        <label>T7RTYPPH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type = Unknown</description>
        <label>T7RTYPUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T7RTYPVE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neglect type = Violent Environments</description>
        <label>T7RTYPVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T8RDVPEV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dom Violence Type= Psychological or emotional</description>
        <label>T8RDVPEV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T8RDVPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dom Violence Type= Physical Violence</description>
        <label>T8RDVPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T8RDVSV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dom Violence Type= Sexual Violence</description>
        <label>T8RDVSV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T8RDVTFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dom Violence Type= Threats of physical or sexual violence</description>
        <label>T8RDVTFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T8RDVUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dom Violence Type= Unknown</description>
        <label>T8RDVUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T9RBIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Biological</description>
        <label>T9RBIO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T9RCHEM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Chemical</description>
        <label>T9RCHEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T9RCONV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Conventional</description>
        <label>T9RCONV</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>